copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/As_a__c.field-meta.xml
<CustomField>
    <fullName>As_a__c</fullName>
    <formula>copado__User_Story__r.Customer_Journey__r.As_a__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>As a...</label>
    <type>Text</type>
</CustomField>