copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/copado__Comments__c.field-meta.xml
<CustomField>
    <fullName>copado__Comments__c</fullName>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>