copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/copado__Subject__c.field-meta.xml
<CustomField>
    <fullName>copado__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>