copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Current_Environment__c.field-meta.xml
<CustomField>
    <fullName>Current_Environment__c</fullName>
    <formula>copado__User_Story__r.copado__Environment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Environment</label>
    <type>Text</type>
</CustomField>