copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ressource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Story_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>