copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Effort_d__c.field-meta.xml
<CustomField>
    <fullName>Effort_d__c</fullName>
    <label>Effort (d)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>