copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Efforts_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Efforts_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Efforts Submitted</label>
    <type>Checkbox</type>
</CustomField>