copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Project_Sprint_Ressource__c.field-meta.xml
<CustomField>
    <fullName>Project_Sprint_Ressource__c</fullName>
    <formula>Project__c+&#39;/&#39;+ Sprint__c+&#39;/&#39;+ Developer__r.FirstName +&#39;.&#39;+ Developer__r.LastName+&#39;/&#39;+ Team__c+&#39;/&#39;+ if(Onsite__c = TRUE, &#39;Onsite&#39;,&#39;Offsite&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project/Sprint/Ressource/Team/Location</label>
    <type>Text</type>
</CustomField>