copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/So_that__c.field-meta.xml
<CustomField>
    <fullName>So_that__c</fullName>
    <formula>copado__User_Story__r.Customer_Journey__r.So_that__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>So that...</label>
    <type>Text</type>
</CustomField>