copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <formula>copado__User_Story__r.Sprint__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprint</label>
    <type>Text</type>
</CustomField>