copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <formula>Text(Developer__r.Team__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team</label>
    <type>Text</type>
</CustomField>