copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Technical_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Technical_Documentation__c</fullName>
    <inlineHelpText>Please specifiy detailed information in Attachment or Notes</inlineHelpText>
    <label>Technical Documentation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>