copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Technical_Specification__c.field-meta.xml
<CustomField>
    <fullName>Technical_Specification__c</fullName>
    <label>Technical Specification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>