copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Time_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Time_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Sheet</label>
    <referenceTo>Time_Sheet__c</referenceTo>
    <relationshipLabel>User Story Tasks</relationshipLabel>
    <relationshipName>User_Story_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>