copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/User_Story_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Title__c</fullName>
    <formula>copado__User_Story__r.copado__User_Story_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Story Title</label>
    <type>Text</type>
</CustomField>