copadoAddon/main/default/objects/copado__User_Story_Task__c/fields/Want_to__c.field-meta.xml
<CustomField>
    <fullName>Want_to__c</fullName>
    <formula>copado__User_Story__r.Customer_Journey__r.Want_to__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Want to...</label>
    <type>Text</type>
</CustomField>