copadoAddon/main/default/objects/copado__User_Story_Task__c/recordTypes/Marketing.recordType-meta.xml
<RecordType>
    <fullName>Marketing</fullName>
    <active>true</active>
    <label>Marketing</label>
</RecordType>