copadoAddon/main/default/objects/copado__User_Story_Task__c/recordTypes/Mulesoft.recordType-meta.xml
<RecordType>
    <fullName>Mulesoft</fullName>
    <active>true</active>
    <label>Mulesoft</label>
</RecordType>