copadoAddon/main/default/objects/copado__User_Story_Task__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>Specification/Test/Deployment</description>
    <label>Other</label>
</RecordType>