copadoAddon/main/default/objects/copado__User_Story_Task__c/recordTypes/Salesforce.recordType-meta.xml
<RecordType>
    <fullName>Salesforce</fullName>
    <active>true</active>
    <label>Salesforce</label>
</RecordType>